# festival-planner

./: CLAUDE.md  CNAME  README.md  app.js  catalog.json  index.html  logic-solver.bundle.js  manifest.json  pyproject.toml  scrape_tiff.py  solver.js  sw.js  test_app.cases.js  test_app.js  test_harness.js  test_solver.js  test_tiff_solver.py  tiff_solver.py
