[project]
name = "tiff-planner"
version = "0.1.0"
description = "Festival screening planner — exact constraint solver"
requires-python = ">=3.10"
dependencies = [
    "ortools>=9.15",  # CP-SAT solver; published 2026-01-14
    "pyyaml>=6.0",
]

[tool.uv]
# run: uv sync   then   uv run python tiff_solver.py schedule.yaml
